feat: added hover anchor for added effect

--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
    </head>
    <body>
       <nav>
-         <a href="#" class="link link-1">Home</a>
+         <a href="#" class="link link-1 active">Home</a>
          <a href="#" class="link link-2">Projects</a>
          <a href="#" class="link link-3">Gallery</a>
          <a href="#" class="link link-4">Studio</a>
          <a href="#" class="link link-5">Profile</a>
       </nav>
-      <div class="bubbles"></div>
+      <div class="bubble active"></div>
+      <div class="bubble hover"></div>
 
       
       <script defer>
