feat: restructure navigation and styling for improved layout

--- a/index.html
+++ b/index.html
@@ -16,15 +16,19 @@
       <link rel="stylesheet" href="./main.css">
    </head>
    <body>
-      <nav>
-         <a href="#" class="link link-1 active">Home</a>
-         <a href="#" class="link link-2">Projects</a>
-         <a href="#" class="link link-3">Gallery</a>
-         <a href="#" class="link link-4">Studio</a>
-         <a href="#" class="link link-5">Profile</a>
-      </nav>
-      <div class="bubble active"></div>
-      <div class="bubble hover"></div>
+      <div class="main-wrap">
+      <div class="nav-wrap">
+         <nav>
+            <a href="#" class="link link-1 active">Home</a>
+            <a href="#" class="link link-2">Projects</a>
+            <a href="#" class="link link-3">Gallery</a>
+            <a href="#" class="link link-4">Studio</a>
+            <a href="#" class="link link-5">Profile</a>
+         </nav>
+         <div class="bubble active"></div>
+         <div class="bubble hover"></div>
+      </div>
+      </div>
 
       
       <script defer>
